--- a/lab_ques.ipynb
+++ b/lab_ques.ipynb
@@ -120,6 +120,8 @@
     "\n",
     "def return_birthyear(name):\n",
     "    if name in emps: return emps[name]\n",
+    "    else: return 'Employee not found'\n",
+    "\n",
     "    \n",
     "\n",
     "\n",
