--- a/lab_ques.ipynb
+++ b/lab_ques.ipynb
@@ -67,21 +67,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{9, 34, 12, -1}\n"
+      "[12, 34, -1, 9]\n"
      ]
     }
    ],
    "source": [
     "# Remove duplicate numbers in the list \n",
+    "my_list = [12, 34, -1, 9, 12, 9]\n",
+    "rm_dups = []\n",
+    "for num in my_list:\n",
+    "    if num not in rm_dups:\n",
+    "        rm_dups.append(num)\n",
     "\n",
-    "rm_dups = set(my_list)\n",
     "print(rm_dups)"
    ]
   },
